
    Added xml::node::set_namespace().
    Add xml::xpath_context class for evaluating XPath expressions.

Version 0.7.0

    Changed the xml::node::node(name, content) constructor so that it doesn't
    create a child text node if the content is empty.

    Added xml::node::set_text_content() for setting unescaped textual
    content.

    Added xml::exception class, derived from std::runtime_error. Xmlwrapp
    will throw only this or derived exception, with the exception of
    std::bad_alloc(), which is still thrown when appropriate.

    Added xml::error_handler and related classes for collecting multiple errors
    and warnings. Added appropriate forms of constructors and functions to other
    classes.

    Added xml::node::clear() method.

    Added xml::schema class for XML Schema validation.

    Added xml::document(filename) and xml::document(data, size) constructors
    for convenient document creation without the need to use tree_parser.

Version 0.6.3

    Fixed compilation with Sun Studio compiler; miscellaneous other build
    related fixes.

    Better error reporting when xml::tree_parser input file doesn't exist.

    Added convenience script for getting dependencies on Windows.

Version 0.6.2

    Fixed xml::tree_parser to fail on non-fatal parser errors.

    Added XMLWRAPP_CHECK_VERSION macro.

Version 0.6.1

    Added Visual C++ 200x projects and fixed VC6 project.

    Fixed xml::event_parser::parse_stream() to return false on empty
    input (Michael Grundberg, #2787836).

    Converted test suite to Boost Test.

    Fixed xslt::stylesheet::apply() to detect and report errors.

Version 0.6.0

    Fixed libxmlwrapp to not depend on libxslt if XSLT support
    is enabled (Vadim Zeitlin, #1927398).

    Ported Unix build system to Autotools.

    Split pkg-config file xmlwrapp.pc into xmlwrapp.pc and
    xsltwrapp.pc. Applications that use libxsltwrapp need to be
    updated to use the latter (too).
